<resources>
    <string name="app_name">Tech Shopping City</string>
    <string name="mainImageView">mainImageView</string>
    <string name="mainHeading"> Sale on sdx-central shopping city </string>

    <string name="phone">Cell Phones</string>
    <string name="accessories">Accessories</string>
    <string name="laptops">Laptops</string>
    <string name="printer">Printer</string>
    <string name="tv">Television</string>


    <string name="iPhone7">iPhone 7</string>
    <string name="iPhone8">iPhone 8</string>
    <string name="SiCase"> Silicone Case</string>
    <string name="LeCase"> Leather Case</string>
    <string name="pad">Charging Pad</string>
    <string name="earPhones"> BeatsX Earphones</string>
    <string name="headPhones"> Wireless Headphones</string>
    <string name="airPods"> Airpods</string>

    <string name="btnText">Check Out</string>

    <!--String for Cellphone Activity-->
    <string name="iPhone">iPhone</string>
    <string name="samsung">Samsung Phone</string>
    <string name="blackBerry">Black Berry</string>
    <string name="google">Google Phone</string>
    <string name="lg">LG Phone</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>    
    <!--String for Cellphone Activity-->
    
    
    <!--String for Customer Activity-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="creditCardNumber">Credit Card Number</string>

    <string name="phoneNo">Phone Number</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
</resources>
