<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CellPhoneActivity">
    <RadioGroup
        android:id="@+id/radioGroupCell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/iPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iPhone"/>
        <RadioButton
            android:id="@+id/samsung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samsung"/>
        <RadioButton
            android:id="@+id/blackBerry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackBerry"/>
        <RadioButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"/>
        <RadioButton
            android:id="@+id/lg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lg"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnBack"
        style="@style/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="12dp"
        android:text="@string/btn_back" />

    <Button
        android:id="@+id/btnNext"
        style="@style/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnBack"
        android:layout_marginStart="134dp"
        android:text="@string/btn_next" />
</RelativeLayout>