<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iPhoneActivity"
    android:orientation="vertical"
    style="@style/screenStyle">
    <CheckBox
        android:id="@+id/iPhone6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="iPhone6"/>
    <CheckBox
        android:id="@+id/iPhone7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iPhone7"/>
    <CheckBox
        android:id="@+id/iPhone8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iPhone8"/>
    <CheckBox
        android:id="@+id/iPhone9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="iPhone9"/>

    <Button
        android:id="@+id/chkOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkOut"
        android:text="@string/btnText" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnBack"
            style="@style/btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="12dp"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btnNext"
            style="@style/btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_next" />
    </RelativeLayout>

</LinearLayout>