<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerDetails"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text" />
</LinearLayout>

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/address" />

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/creditCardNumber" />

        <EditText
            android:id="@+id/txtCardNo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="12"
            android:hint="@string/creditCardNumber" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="Phone Number" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:inputType="phone"
            android:maxLength="11"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order"/>
</LinearLayout>